i added some paragraps and some styles

--- a/index.html
+++ b/index.html
@@ -9,27 +9,66 @@
 </head>
 
 <body>
-    <header>
-        <a href="Blog">Blog</a>
-        <a href="Project">Project</a>
-        <a href="FAQ">FAQ</a>
-    </header>
-    <h1>Ray <span>CODES</span></h1>
-    <p>
-        Learnt <button><a href="HTML">HTML
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="size-6">
-                    <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M8.25 15 12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9" />
-                </svg>
-            </a></button>
-    </p>
-    <br>
-    <p>Hello! My name is Jerry Raymond, and I am a passionate web developer with a keen interest in creating engaging
-        and user-friendly websites.
-    </p>
+    <main>
+        <article>
+            <header>
+                <a href="blog.html">Blog</a>
+                <a href="project.html">Project</a>
+                <a href="faq.html">FAQ</a>
+                <a href="https://github.com/JerryRay-ai" target="_blank"><span op75="" i-simple-icons-github=""></span>
+                    GitHub</a>
+            </header>
+            <h1>Nox <span class="dev">DEV</span></h1>
+            <p>
+                Learnt
+                <a href="html.html" class="button-link">
+                    <button type="button" class="button-link">
+                        <span style="display: inline-flex; align-items: center; gap: 6px;">
+                            HTML
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6" style="vertical-align: middle;">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                            </svg>
+                        </span>
+                    </button>
+                </a>
+                /
+                <a href="CSS">
+                    <button type="button" class="button-link">
+                        <span style="display: inline-flex; align-items: center; gap: 6px;">
+                            CSS
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6" style="vertical-align: middle;">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                            </svg>
+                        </span>
+                    </button>
+                </a>
 
+            </p>
 
+            <br>
+            <p>Hello! My name is Jerry Raymond, and I am a passionate web developer with a keen interest in creating
+                engaging and user-friendly websites.
+            </p>
+
+            <p>Dreaming up cool ideas and making them come true is where my passion lies. I am enthusiastic about
+                building
+                tools that help myself and others to be more productive and enjoy the process of crafting.</p>
+
+            <p>When I am not coding, I enjoy reading about the latest trends in technology, experimenting with new
+                design
+                concepts, and helping others learn the basics of web development. My goal is to build impactful digital
+                experiences and contribute positively to the tech community.</p>
+    </main>
+    </article>
+
+    <footer>
+        <p>&copy; 2025 Nox <span class="dev">DEV</span>. All rights reserved.</p>
+        <!-- <p>Contact: <a href="mailto:jerryray300@gmail.com">jerryray300@gmail.com</a></p> -->
+    </footer>
 </body>
 
 </html>
