--- a/index.html
+++ b/index.html
@@ -9,16 +9,37 @@
 </head>
 
 <body>
-    <main>
-        <article>
-            <header>
-                <a href="blog.html">Blog</a>
-                <a href="project.html">Project</a>
-                <a href="faq.html">FAQ</a>
-                <a href="https://github.com/JerryRay-ai" target="_blank"><span op75="" i-simple-icons-github=""></span>
-                    GitHub</a>
-            </header>
-            <h1>Nox <span class="dev">DEV</span></h1>
+    <article>
+        <header>
+            <h1> Nox <span class="dev"> DEV <span id="tm">&trade;</span></span></h1>
+
+
+        </header>
+        <nav class="nav1">
+            <a href="blog.html">Blog</a>
+            <a href="project.html">Project</a>
+            <a href="faq.html">FAQ</a>
+            <a href="https://github.com/JerryRay-ai" target="_blank"><span op75="" i-simple-icons-github=""></span>
+                GitHub</a>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+            </svg>
+        </nav>
+        <aside class="aside1">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur maiores doloribus, nihil similique
+            eligendi
+            fuga optio, eos, soluta laborum quas expedita ex perspiciatis? Dolorum facere distinctio aliquam architecto
+            magnam voluptatum.
+        </aside>
+        <aside class="aside2">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur maiores doloribus, nihil similique
+            eligendi
+            fuga optio, eos, soluta laborum quas expedita ex perspiciatis? Dolorum facere distinctio aliquam architecto
+            magnam voluptatum.
+        </aside>
+        <main>
             <p>
                 Learnt
                 <a href="html.html" class="button-link">
@@ -53,22 +74,146 @@
             <p>Hello! My name is Jerry Raymond, and I am a passionate web developer with a keen interest in creating
                 engaging and user-friendly websites.
             </p>
+            <p>
+                Outside of programming, I enjoy doing photography and traveling. I post photos on this page. I also love
+                anime, movies and dramas, I am trying to list my media consumption. Also, in case you are interested,
+                here are the hardware/software I use.
+            </p>
+            <div>
+                <!-- this is for the cards-icons section -->
+                <div class="flexdiv">
+                    <p>working at</p>
+                    <span class="span1">
+                        <a href="" class="btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                width="20" height="20" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5" />
+                            </svg>
 
-            <p>Dreaming up cool ideas and making them come true is where my passion lies. I am enthusiastic about
-                building
-                tools that help myself and others to be more productive and enjoy the process of crafting.</p>
+                            Nuxt</a>
+                        <span style="margin-right: 12px;"></span>
+                        <a href="" class="btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                width="20" height="20" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5" />
+                            </svg>
 
-            <p>When I am not coding, I enjoy reading about the latest trends in technology, experimenting with new
+                            Nuxt</a>
+                    </span>
+                </div>
+
+                <div class="flexdiv">
+                    <p>studying at</p>
+                    <span class="span1">
+                        <a href="" class="btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z" />
+                            </svg>
+
+                            Vercel</a>
+                    </span>
+                    <span class="span1">
+                        <a href="" class="btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M6.429 9.75 2.25 12l4.179 2.25m0-4.5 5.571 3 5.571-3m-11.142 0L2.25 7.5 12 2.25l9.75 5.25-4.179 2.25m0 0L21.75 12l-4.179 2.25m0 0 4.179 2.25L12 21.75 2.25 16.5l4.179-2.25m11.142 0-5.571 3-5.571-3" />
+                            </svg>
+
+                            VieuUse</a>
+                    </span>
+                    <span class="span1">
+                        <a href="" class="btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M14.25 6.087c0-.355.186-.676.401-.959.221-.29.349-.634.349-1.003 0-1.036-1.007-1.875-2.25-1.875s-2.25.84-2.25 1.875c0 .369.128.713.349 1.003.215.283.401.604.401.959v0a.64.64 0 0 1-.657.643 48.39 48.39 0 0 1-4.163-.3c.186 1.613.293 3.25.315 4.907a.656.656 0 0 1-.658.663v0c-.355 0-.676-.186-.959-.401a1.647 1.647 0 0 0-1.003-.349c-1.036 0-1.875 1.007-1.875 2.25s.84 2.25 1.875 2.25c.369 0 .713-.128 1.003-.349.283-.215.604-.401.959-.401v0c.31 0 .555.26.532.57a48.039 48.039 0 0 1-.642 5.056c1.518.19 3.058.309 4.616.354a.64.64 0 0 0 .657-.643v0c0-.355-.186-.676-.401-.959a1.647 1.647 0 0 1-.349-1.003c0-1.035 1.008-1.875 2.25-1.875 1.243 0 2.25.84 2.25 1.875 0 .369-.128.713-.349 1.003-.215.283-.4.604-.4.959v0c0 .333.277.599.61.58a48.1 48.1 0 0 0 5.427-.63 48.05 48.05 0 0 0 .582-4.717.532.532 0 0 0-.533-.57v0c-.355 0-.676.186-.959.401-.29.221-.634.349-1.003.349-1.035 0-1.875-1.007-1.875-2.25s.84-2.25 1.875-2.25c.37 0 .713.128 1.003.349.283.215.604.401.96.401v0a.656.656 0 0 0 .658-.663 48.422 48.422 0 0 0-.37-5.36c-1.886.342-3.81.574-5.766.689a.578.578 0 0 1-.61-.58v0Z" />
+                            </svg>
+
+
+
+                            UnoCSS</a>
+                    </span>
+                    <span class="span1">
+                        <a href="" class="btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="m20.25 7.5-.625 10.632a2.25 2.25 0 0 1-2.247 2.118H6.622a2.25 2.25 0 0 1-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125Z" />
+                            </svg>
+
+
+                            NoxDev </a>
+                    </span>
+                    <span class="span1">
+                        <a href="" class="btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
+                            </svg>
+                            SliDev </a>
+                    </span>
+                </div>
+                <div class="flexdiv">
+                    <p>Intern at</p>
+                    <span class="span1">
+                        <a href="" class="btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M4.098 19.902a3.75 3.75 0 0 0 5.304 0l6.401-6.402M6.75 21A3.75 3.75 0 0 1 3 17.25V4.125C3 3.504 3.504 3 4.125 3h5.25c.621 0 1.125.504 1.125 1.125v4.072M6.75 21a3.75 3.75 0 0 0 3.75-3.75V8.197M6.75 21h13.125c.621 0 1.125-.504 1.125-1.125v-5.25c0-.621-.504-1.125-1.125-1.125h-4.072M10.5 8.197l2.88-2.88c.438-.439 1.15-.439 1.59 0l3.712 3.713c.44.44.44 1.152 0 1.59l-2.879 2.88M6.75 17.25h.008v.008H6.75v-.008Z" />
+                            </svg>
+                            Shiki </a>
+                    </span>
+
+                    <span class="span1">
+                        <a href="" class="btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M4.098 19.902a3.75 3.75 0 0 0 5.304 0l6.401-6.402M6.75 21A3.75 3.75 0 0 1 3 17.25V4.125C3 3.504 3.504 3 4.125 3h5.25c.621 0 1.125.504 1.125 1.125v4.072M6.75 21a3.75 3.75 0 0 0 3.75-3.75V8.197M6.75 21h13.125c.621 0 1.125-.504 1.125-1.125v-5.25c0-.621-.504-1.125-1.125-1.125h-4.072M10.5 8.197l2.88-2.88c.438-.439 1.15-.439 1.59 0l3.712 3.713c.44.44.44 1.152 0 1.59l-2.879 2.88M6.75 17.25h.008v.008H6.75v-.008Z" />
+                            </svg>
+                            SoundCom </a>
+                    </span>
+                </div>
+
+            </div>
+
+            <p>
+                Dreaming up cool ideas and making them come true is where my passion lies. I am enthusiastic about
+                building tools that help myself and others to be more productive and enjoy the process of crafting. You
+                can find my full projects list here.
+            </p>
+
+            <p>
+                When I am not coding, I enjoy reading about the latest trends in technology, experimenting with new
                 design
                 concepts, and helping others learn the basics of web development. My goal is to build impactful digital
-                experiences and contribute positively to the tech community.</p>
-    </main>
+                experiences and contribute positively to the tech community.
+            </p>
+
+
+        </main>
     </article>
 
+    <br>
     <footer>
-        <p>&copy; 2025 Nox <span class="dev">DEV</span>. All rights reserved.</p>
+        <p>&copy; 2025 Nox <span class="dev">DEV</span>.</p>
+        <br>
+        <b>All rights reserved.</b>
+
         <!-- <p>Contact: <a href="mailto:jerryray300@gmail.com">jerryray300@gmail.com</a></p> -->
     </footer>
 </body>
 
+
 </html>
+
+<form action="insert name">
+
+</form>
