i added some changes

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
     <article>
         <header>
-            <h1> Nox <span class="dev"> DEV <span id="tm">&trade;</span></span></h1>
-
-
+            <h1 class="main-title"> Nox <span class="dev"> DEV <span id="tm">&trade;</span></span></h1>
         </header>
         <nav class="nav1">
+            <a href="About.html">About</a>
             <a href="blog.html">Blog</a>
             <a href="project.html">Project</a>
             <a href="faq.html">FAQ</a>
@@ -28,17 +27,18 @@
             </svg>
         </nav>
         <aside class="aside1">
+            <!-- <p>
+                You can also reach out to me if you have any comments or reviews about my portfolio, as i like to be
+                introduced to new ideas and i'd also want to learn from my readers who are also developers as myself
+                <button><a href="conatact.html">contact</a></button>
+            </p> -->
+        </aside>
+        <!-- <aside class="aside2">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur maiores doloribus, nihil similique
             eligendi
             fuga optio, eos, soluta laborum quas expedita ex perspiciatis? Dolorum facere distinctio aliquam architecto
             magnam voluptatum.
-        </aside>
-        <aside class="aside2">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur maiores doloribus, nihil similique
-            eligendi
-            fuga optio, eos, soluta laborum quas expedita ex perspiciatis? Dolorum facere distinctio aliquam architecto
-            magnam voluptatum.
-        </aside>
+        </aside> -->
         <main>
             <p>
                 Learnt
@@ -182,6 +182,13 @@
                     </span>
                 </div>
 
+                <div class="contact">
+                    <p>
+                        You could also contact me through the address below, as working with you would be a pleasure
+                    </p>
+                    <p>Contact: <a href="mailto:jerryray300@gmail.com">jerryray300@gmail.com</a></p>
+                </div>
+
             </div>
 
             <p>
@@ -203,11 +210,11 @@
 
     <br>
     <footer>
-        <p>&copy; 2025 Nox <span class="dev">DEV</span>.</p>
+        <p>&copy; 2025 Nox <span class="dev">DEV</span>.</p> km
         <br>
         <b>All rights reserved.</b>
 
-        <!-- <p>Contact: <a href="mailto:jerryray300@gmail.com">jerryray300@gmail.com</a></p> -->
+        <!--  -->
     </footer>
 </body>
 
