This are the styles you asked me to add

--- a/About.html
+++ b/About.html
@@ -8,24 +8,42 @@
     <link rel="stylesheet" href="About.css">
 
 </head>
-<h1>
+<!-- <h1>
     Nox <span>DEV</span>
-</h1>
+</h1> -->
 
 <body>
+    <div class="topnav">
+  <a href="#home" class="active">Nox <span>DEV</span></a>
+  
+  <div id="myLinks">
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+  
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
     <h2>
         Welcome to Nox <span>DEV</span>.
     </h2><br>
+
     <p> I'm a passionate web developer, with insights on creating user friendly websites
         and web pages.
         I'm also a reader. I love reading educative and inspiring books both online and offline.
         I also enjoy reading about the latest trends on technology and the likes. 
     </p>
+
+    <script src="hamburger.js"></script>
     <footer style="text-align: center;">
         Thanks for getting to know about us <br>
         &copy; 2025 All rights reserved <br>
         <strong> Nox <span>DEV</span> &reg;</strong>
     </footer>
+    
+
 </body>
 
 </html>
